# animal-cam-monitor

./: pyproject.toml  run_streamlit.sh
notebooks/: AnimalCams.ipynb  TryingOutGroundlight.ipynb
streamlit/: animal_cams.py  animal_cams_data_collection.py  utils.py
