[tool.poetry]
name = "newhire-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "newhire_demo"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
notebook = "^6.5.2"
scikit-learn = "^1.2.1"
numpy = "^1.24.2"
opencv-python = "^4.7.0.68"
groundlight = "^0.6.3"
pandas = "^1.5.3"
streamlit = "^1.17.0"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
